--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "npm server.js"
   },
   "name": "paystack",
   "version": "1.0.0",
